Finalização Visual: Logo Veredas, Mockup Ebook, Ajustes Mobile e Identidade Rogério Amaral

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Método Vereda | Rogério Amaral</title>
   <meta name="description"
-    content="Domine a Execução Trabalhista com o Juiz Rogério Amaral. O algoritmo da eficiência para advogados que querem resultados reais." />
+    content="Domine a Execução Trabalhista com o Servidor Federal Rogério Amaral. O algoritmo da eficiência para advogados que querem resultados reais." />
 </head>
 
 <body>
