--- a/index.html
+++ b/index.html
@@ -31,11 +31,21 @@
 
   <!-- End Meta Pixel Code -->
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Método Vereda | Rogério Amaral</title>
   <meta name="description"
     content="Domine a Execução Trabalhista com o Servidor Federal Rogério Amaral. O algoritmo da eficiência para advogados que querem resultados reais." />
+
+  <!-- Social Media & Favicon -->
+  <link rel="icon" type="image/png" href="/logo-vereda.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://www.metodovereda.com.br/" />
+  <meta property="og:title" content="Método Vereda | Rogério Amaral" />
+  <meta property="og:description"
+    content="Domine a Execução Trabalhista com o Servidor Federal Rogério Amaral. Um mapa prático para resultados reais." />
+  <meta property="og:image" content="https://www.metodovereda.com.br/logo-vereda.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
 </head>
 
 <body>
