feat: nova copy educacional, visual dispersao e faq

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     content="Domine a Execução Trabalhista com o Servidor Federal Rogério Amaral. O algoritmo da eficiência para advogados que querem resultados reais." />
 
   <!-- Social Media & Favicon -->
-  <link rel="icon" type="image/png" href="/logo-vereda.png" />
+  <link rel="icon" type="image/png" href="/veredas-logo.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://www.metodovereda.com.br/" />
   <meta property="og:title" content="Método Vereda | Rogério Amaral" />
