--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   <meta property="og:title" content="Método Vereda | Rogério Amaral" />
   <meta property="og:description"
     content="Domine a Execução Trabalhista com o Servidor Federal Rogério Amaral. Um mapa prático para resultados reais." />
-  <meta property="og:image" content="https://www.metodovereda.com.br/logo-vereda.png" />
+  <meta property="og:image" content="https://www.metodovereda.com.br/veredas-logo.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
 </head>
